err/django-zurb-foundation-rtl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_zurb_foundation_rtl-6.0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/foundation'...
Compiling './lib/python3.5/site-packages/foundation/create_partials.py'...
***   File "./lib/python3.5/site-packages/foundation/create_partials.py", line 22
    print filename,
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/foundation/static'...
Listing './lib/python3.5/site-packages/foundation/static/foundation'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/css'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/js'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/js/foundation'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/js/vendor'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss/components'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss/forms'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss/grid'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss/settings'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss/typography'...
Listing './lib/python3.5/site-packages/foundation/static/foundation/scss/util'...
Listing './lib/python3.5/site-packages/foundation/templates'...
Listing './lib/python3.5/site-packages/foundation/templates/foundation'...
Listing './lib/python3.5/site-packages/foundation/templates/foundation/scss'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
